--- a/docs/doc/intro/devOperation/system/客户端维护.md
+++ b/docs/doc/intro/devOperation/system/客户端维护.md
@@ -8,7 +8,7 @@ tag:
   - 客户端维护
 ---
 
-在基于灯灯开发新应用时，每新增一个“客户端”（如lamp-web、lamp-web-pro、小程序、安卓端、ios端等），都需要在这你新增一条数据，并将**客户端ID**、**客户端密码**复制出来，提供给各个“客户端”，在请求接口时，通过Base64将**客户端ID**、**客户端密码**加密后通过请求头参数**Authorization**传递到后台。
+在基于灯灯开发新应用时，每新增一个“客户端”（如lamp-web、lamp-web-pro、小程序、安卓端、ios端等），都需要在这里新增一条数据，并将**客户端ID**、**客户端密码**复制出来，提供给各个“客户端”，在请求接口时，通过Base64将**客户端ID**、**客户端密码**加密后通过请求头参数**Authorization**传递到后台。
 
 
 
